--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1 id="cardiff-school-of-mathematics-code-club">Cardiff School of Mathematics Code Club</h1>
-<p>Meeting time: Thursday at 1600</p>
+<p>Meeting time: Thursdays at 1600</p>
+<p>(There might be doughnuts)</p>
