--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1 id="cardiff-school-of-mathematics-code-club">Cardiff School of Mathematics Code Club</h1>
-<p>Meeting time: Thursdays at 16:00 M/0.33</p>
+<p>Meeting time: Thursdays at 16:00 in M/0.33</p>
 <p>(There might be doughnuts)</p>
