--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
+<head>
+    <title>Code Club</title>
+</head>
+<body>
 <h1 id="cardiff-school-of-mathematics-code-club">Cardiff School of Mathematics Code Club</h1>
 <p>Meeting time: Thursdays at 16:00 in M/0.33</p>
 <p>(There might be doughnuts - if you're quick!)</p>
-<p>Vince's favourite quote so far "love the fact that I'm learning Vim on the fly!" Adam, 2nd year student </p>
+
+<a href="sessions.html">Sessions</a>
+</body>
+</html>
