Adding link to the euler problems

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <p>(There might be doughnuts - if you're quick!)</p>
         <p>Vince's favourite quote so far "love the fact that I'm learning Vim on the fly!" Adam, 2nd year student </p>
     </div>
+
+    <div>
+        <p><a href='http://cardiffmathematicscodeclub.github.io/'>Here's a link to the Euler problems.</a></p>
+    </div>
 </div>
 </body>
 </html>
