fixing bad link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div>
-        <p><a href='http://cardiffmathematicscodeclub.github.io/'>Here's a link to the Euler problems.</a></p>
+        <p><a href='https://projecteuler.net'>Here's a link to the Euler problems.</a></p>
     </div>
 </div>
 </body>
