--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <p>(There might be doughnuts - if you're quick!)</p>
         <p>Vince's favourite quote so far "love the fact that I'm learning Vim on the fly!" Adam, 2nd year student </p>
         <p><a href='https://projecteuler.net'>Here's a link to the Euler problems.</a></p>
+        <p><a href="sessions.html">Sessions</a></p>
     </div>
-<a href="sessions.html">Sessions</a>
 </div>
 </body>
 </html>
