Added a navigation menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <p><a href='https://projecteuler.net'>Here's a link to the Euler problems.</a></p>
         <p><a href="sessions.html">Sessions</a></p>
     </div>
+
 </div>
+    <div class="menu">
+        <h3>Menu</h3> 
+        <a href="sessions.html">Past Sessions</a> <br/>
+        <a href="inspiration.html">Inspiration</a>
+    </div>
 </body>
 </html>
