--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
 </div>
     <div class="menu">
-        <h3>Menu</h3> 
+        <h3>Menu</h3>
+        <a href="index.html">Home</a> <br/>
         <a href="sessions.html">Past Sessions</a> <br/>
         <a href="inspiration.html">Inspiration</a>
+        <p></p>
     </div>
 </body>
 </html>
