--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
     <h1 id="cardiff-school-of-mathematics-code-club">Cardiff School of Mathematics Code Club</h1>
 
     <div class="main_body">
-        <p>Meeting time: Thursdays at 16:00 in M/0.33</p>
-        <p>(There might be doughnuts - if you're quick!)</p>
-        <p>Vince's favourite quote so far "love the fact that I'm learning Vim on the fly!" Adam, 2nd year student </p>
-        <p><a href='https://projecteuler.net'>Here's a link to the Euler problems.</a></p>
-        <p><a href="sessions.html">Sessions</a></p>
+        <p>Code Club is a place where like minded people who are passionate about programming can get together
+           and hang out, talk about coding in general and work on any projects that they have
+           in mind, whether it be solo or part of a team. Code Club is the ideal place to
+           improve your skills as a programmer while enjoying the pleasant company of others who share your interests.</p>
+
+        <p>Can't wait to come along? Well we meet every Thursday in M/0.33 in the School of Mathematics building at 16:00.</p>
+
+        <p>Do you think it sounds like a great idea, but are looking for an excuse to turn up? Then be sure to check out
+           our <a href="inspiration.html">Inspiration</a> page.</p>
+
     </div>
 
 </div>
+    <!-- Navigation Menu -->
     <div class="menu">
         <h3>Menu</h3>
         <a href="index.html">Home</a> <br/>
