--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1 id="cardiff-school-of-mathematics-code-club">Cardiff School of Mathematics Code Club</h1>
 
     <div class="main_body">
+
         <p>Code Club is a place where like minded people who are passionate about programming can get together
            and hang out, talk about coding in general and work on any projects that they have
            in mind, whether it be solo or part of a team. Code Club is the ideal place to
@@ -20,6 +21,7 @@
         <p>Do you think it sounds like a great idea, but are looking for an excuse to turn up? Then be sure to check out
            our <a href="inspiration.html">Inspiration</a> page.</p>
 
+        <i><b>Disclaimer:</b> This website was made by programmers for programmers - please forgive any spelling mistakes!</i>
     </div>
 
 </div>
