--- a/inspiration.html
+++ b/inspiration.html
@@ -6,6 +6,54 @@
 </head>
 <body>
 
+    <div class="main">
+        <h1>Inspiration</h1>
+
+        <div class="main_body">
+            <p> There is so much you can do during your time at Code Club anything
+                from learning a new programming languages such as <a href="languages/java.html">Java</a>
+                or <a href="languages/haskell.html">Haskell</a> to usefull tools such
+                as <a href="tools/git.html">Git</a> for version control or <a href="tools/vim.html">Vim</a>
+                for text editing to hacking away in <a href="http://pi.minecraft.net/?page_id=14">Minecraft</a>
+                for the Raspberry Pi! You are only limited by your imagination!
+            </p>
+
+            <h3>Programming Languages</h3>
+
+            <p>There are more programming languages than stars in the galaxy... OK
+               <i>slight</i> exaggeration but there are a lot of them. Created for any
+               possible purpose imaginable from building video games to driving rovers on Mars or
+               simply trying to <a href="languages/brainfuck.html">confuse</a> the programmer using them!
+            </p>
+
+            <p>Some of the more popular languages include <a href="languages/java.html">Java</a>,
+              <a href="languages/python.html">Python</a> and <a href="languages/cpp.html">C++</a>.
+              However there are many more than that! Be sure to look at the full list on the left.
+            </p>
+
+            <h3>Programming Challenges</h3>
+
+            <p>Many places on the interest provide enthusatic programmers with excercises and challenges
+              to flex their coding muscles. Below are links to a few of them:</p>
+
+            <ul>
+                <li><a href="https://projecteuler.net">Project Euler</a> - A site with over 450 problems many with a
+                    mathematical focus to get your teeth into!</li>
+
+                <li><a href="http://www.reddit.com/r/dailyprogrammer/">Daily Programmer</a> - A subreddit with new problems
+                    released on a Monday, Wednesday and Friday increasing in diffulty throughout the week. Challenges are based
+                    on a wide variety of topics, often submitted by fellow users of the subreddit</li>
+
+                <li><a href="http://programmingpraxis.com/">Programming Praxis</a> - A blog with new excercies posted every few days
+                    on a range of topics. Many of them are presented as a word problem.
+            </ul>
+
+            <h3>Stay Tuned</h3>
+
+            <p>Watch this space, more coming soon...</p>
+        </div>
+    </div>
+
     <!-- Navigation Menu -->
     <div class="menu">
         <h3>Menu</h3>
@@ -14,10 +62,13 @@
         <a href="inspiration.html">Inspiration</a>
 
         <p>Languages <br/>
+        <a href="languages/brainfuck.html"> Brainfuck</a> <br/>
         <a href="languages/c.html">C</a> <br/>
+        <a href="languages/cpp.html">C++</a> <br/>
+        <a href="languages/haskell.html">Haskell</a> <br/>
+        <a href="languages/java.html">Java</a> <br/>
         <a href="languages/python.html">Python</a> <br/>
         </p>
-        <p></p>
     </div>
 </body>
 </html>
