Fixed some broken links

--- a/languages/brainfuck.html
+++ b/languages/brainfuck.html
@@ -13,9 +13,9 @@
     <!-- Navigation Menu -->
     <div class="menu">
         <h3>Menu</h3>
-        <a href="index.html">Home</a> <br/>
-        <a href="sessions.html">Past Sessions</a> <br/>
-        <a href="inspiration.html">Inspiration</a>
+        <a href="../index.html">Home</a> <br/>
+        <a href="../sessions.html">Past Sessions</a> <br/>
+        <a href="../inspiration.html">Inspiration</a>
 
         <p>Languages <br/>
         <a href="languages/brainfuck.html"> Brainfuck</a> <br/>
