--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <h1 id="cardiff-school-of-mathematics-code-club">404 - Page not found</h1>
 
     <div class="main_body">
-		<p>The page you have tried to access does not exists. Click <a href="./index.html">here</a> to go back to the homepage.</p>
+		<p>The page you have tried to access does not exists. Click <a href="../index.html">here</a> to go back to the homepage.</p>
     </div>
 
 </div>
