--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Code Club Home</title>
+    <title>404 - Code Club</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css"/>
 </head>
 <body>
@@ -10,7 +10,7 @@
     <h1 id="cardiff-school-of-mathematics-code-club">404 - Page not found</h1>
 
     <div class="main_body">
-		<p>The page you have tried to access does not exists. Click <a href="../index.html">here</a> to go back to the homepage.</p>
+		<p>The page you have tried to access does not exists. Click <a href="/index.html">here</a> to go back to the homepage.</p>
     </div>
 
 </div>
