modified:   index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>Do you think it sounds like a great idea, but are looking for an excuse to turn up? Then be sure to check out
            our <a href="inspiration.html">Inspiration</a> page.</p>
 
-        <i><b>Disclaimer:</b> This website was made by programmers for programmers - please forgive any spelling mistakes!</i>
+        <p><i><b>Disclaimer:</b> This website was made by programmers for programmers - please forgive any spelling mistakes!</i></p>
     </div>
 
 </div>
