--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>404 - Code Club</title>
-    <link rel="stylesheet" type="text/css" href="styles/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/styles/main.css"/>
 </head>
 <body>
 
