--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 id="cardiff-school-of-mathematics-code-club">Cardiff School of Mathematics Code Club</h1>
 
     <div class="main_body">
-        <p>Code hi Club is a place where like minded people who are passionate about programming can get together
+        <p>Code Club is a place where like minded people who are passionate about programming can get together
            and hang out, talk about coding in general and work on any projects that they have
            in mind, whether it be solo or part of a team. Code Club is the ideal place to
            improve your skills as a programmer while enjoying the pleasant company of others who share your interests.</p>
