added week 4 and a link to home from inspiration

--- a/inspiration.html
+++ b/inspiration.html
@@ -52,6 +52,7 @@
 
             <p>Watch this space, more coming soon...</p>
         </div>
+        <p>Click <a href="index.html">here</a> to go back to the main page</p>
     </div>
 
     <!-- Navigation Menu -->
