added some langauge pages

--- a/languages/c.html
+++ b/languages/c.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Brainfuck</title>
+    <title>C</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css"/>
 </head>
 <body>
 
     <div class="main">
-        <h1>Brainfuck</h1>
+        <h1>C</h1>
     </div>
 
     <!-- Navigation Menu -->
