--- a/languages/c.html
+++ b/languages/c.html
@@ -20,7 +20,7 @@
         <p>Languages <br/>
         <a href="languages/brainfuck.html"> Brainfuck</a> <br/>
         <a href="languages/c.html">C</a> <br/>
-        <a href="languages/c++.html">C++</a> <br/>
+        <a href="languages/C++.html">C++</a> <br/>
         <a href="languages/haskell.html">Haskell</a> <br/>
         <a href="languages/java.html">Java</a> <br/>
         <a href="languages/python.html">Python</a> <br/>
