--- a/languages/C++.html
+++ b/languages/C++.html
@@ -19,8 +19,8 @@
 
         <p>Languages <br/>
         <a href="brainfuck.html"> Brainfuck</a> <br/>
-        <a href="c.html">C</a> <br/>
-        <a href="c++.html">C++</a> <br/>
+        <a href="C.html">C</a> <br/>
+        <a href="C++.html">C++</a> <br/>
         <a href="haskell.html">Haskell</a> <br/>
         <a href="java.html">Java</a> <br/>
         <a href="python.html">Python</a> <br/>
