--- a/inspiration.html
+++ b/inspiration.html
@@ -64,7 +64,7 @@
 
         <p>Languages <br/>
         <a href="languages/brainfuck.html"> Brainfuck</a> <br/>
-        <a href="languages/c.html">C</a> <br/>
+        <a href="languages/C.html">C</a> <br/>
         <a href="languages/C++.html">C++</a> <br/>
         <a href="languages/haskell.html">Haskell</a> <br/>
         <a href="languages/java.html">Java</a> <br/>
