added poem thingy

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 
 <div class="main">
     <h1 id="cardiff-school-of-mathematics-code-club">Cardiff School of Mathematics Code Club</h1>
-
+    <div class="quote">
+      <p align="center"><i> Three Functions for the Windows under the sky,<br>
+Seven for the Linux in their halls of stone,<br>
+Nine for Apple doomed to die,<br>
+One for the Dark Lord on his dark kernel<br>
+In the Land of Arch where the Json lie.<br>
+One Function to rule them all, One Function to find them,<br>
+One Function to bring them all and in the darkness bind them<br>
+In the Land of Arch where the Json lie.</i></p>
+    </div>
     <div class="main_body">
-        <p>Code Club is a place where like minded people who are passionate about programming can get together
+      <p>Code Club is a place where like minded people who are passionate about programming can get together
            and hang out, talk about coding in general and work on any projects that they have
            in mind, whether it be solo or part of a team. Code Club is the ideal place to
            improve your skills as a programmer while enjoying the pleasant company of others who share your interests.</p>
