fixing bad link

--- a/inspiration.html
+++ b/inspiration.html
@@ -27,7 +27,7 @@
             </p>
 
             <p>Some of the more popular languages include <a href="languages/java.html">Java</a>,
-              <a href="languages/python.html">Python</a> and <a href="languages/cpp.html">C++</a>.
+              <a href="languages/python.html">Python</a> and <a href="languages/C++.html">C++</a>.
               However there are many more than that! Be sure to look at the full list on the left.
             </p>
 
