Cleaning up HTML & CSS code

--- a/inspiration.html
+++ b/inspiration.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css"/>
 </head>
 <body>
-
     <div class="main">
         <h1>Inspiration</h1>
 
         <div class="main_body">
-            <p> There is so much you can do during your time at Code Club anything
+            <p> 
+                There is so much you can do during your time at Code Club anything
                 from learning a new programming languages such as <a href="languages/java.html">Java</a>
-                or <a href="languages/haskell.html">Haskell</a> to usefull tools such
+                or <a href="languages/haskell.html">Haskell</a> to useful tools such
                 as <a href="tools/git.html">Git</a> for version control or <a href="tools/vim.html">Vim</a>
                 for text editing to hacking away in <a href="http://pi.minecraft.net/?page_id=14">Minecraft</a>
                 for the Raspberry Pi! You are only limited by your imagination!
@@ -20,39 +20,44 @@
 
             <h3>Programming Languages</h3>
 
-            <p>There are more programming languages than stars in the galaxy... OK
-               <i>slight</i> exaggeration but there are a lot of them. Created for any
-               possible purpose imaginable from building video games to driving rovers on Mars or
-               simply trying to <a href="languages/brainfuck.html">confuse</a> the programmer using them!
+            <p>
+                There are more programming languages than stars in the galaxy... OK
+                <i>slight</i> exaggeration but there are a lot of them. Created for any
+                possible purpose imaginable from building video games to driving rovers on Mars or
+                simply trying to <a href="languages/brainfuck.html">confuse</a> the programmer using them!
             </p>
 
-            <p>Some of the more popular languages include <a href="languages/java.html">Java</a>,
-              <a href="languages/python.html">Python</a> and <a href="languages/C++.html">C++</a>.
-              However there are many more than that! Be sure to look at the full list on the left.
+            <p>
+                Some of the more popular languages include <a href="languages/java.html">Java</a>,
+                <a href="languages/python.html">Python</a> and <a href="languages/C++.html">C++</a>.
+                However there are many more than that! Be sure to look at the full list on the left.
             </p>
 
             <h3>Programming Challenges</h3>
 
-            <p>Many places on the interest provide enthusatic programmers with excercises and challenges
-              to flex their coding muscles. Below are links to a few of them:</p>
+            <p>
+                Many places on the interest provide enthusiastic programmers with exercises and challenges
+                to flex their coding muscles. Below are links to a few of them:
+            </p>
 
             <ul>
                 <li><a href="https://projecteuler.net">Project Euler</a> - A site with over 450 problems many with a
                     mathematical focus to get your teeth into!</li>
 
                 <li><a href="http://www.reddit.com/r/dailyprogrammer/">Daily Programmer</a> - A subreddit with new problems
-                    released on a Monday, Wednesday and Friday increasing in diffulty throughout the week. Challenges are based
+                    released on a Monday, Wednesday and Friday increasing in difficulty throughout the week. Challenges are based
                     on a wide variety of topics, often submitted by fellow users of the subreddit</li>
 
-                <li><a href="http://programmingpraxis.com/">Programming Praxis</a> - A blog with new excercies posted every few days
+                <li><a href="http://programmingpraxis.com/">Programming Praxis</a> - A blog with new exercises posted every few days
                     on a range of topics. Many of them are presented as a word problem.
             </ul>
 
             <h3>Stay Tuned</h3>
 
             <p>Watch this space, more coming soon...</p>
+            
+            <p>Click <a href="index.html">here</a> to go back to the main page</p>
         </div>
-        <p>Click <a href="index.html">here</a> to go back to the main page</p>
     </div>
 
     <!-- Navigation Menu -->
@@ -60,16 +65,15 @@
         <h3>Menu</h3>
         <a href="index.html">Home</a> <br/>
         <a href="sessions.html">Past Sessions</a> <br/>
-        <a href="inspiration.html">Inspiration</a>
-
-        <p>Languages <br/>
+        <a href="inspiration.html">Inspiration</a> <br />
+        <br />
+        Languages <br/>
         <a href="languages/brainfuck.html"> Brainfuck</a> <br/>
         <a href="languages/C.html">C</a> <br/>
         <a href="languages/C++.html">C++</a> <br/>
         <a href="languages/haskell.html">Haskell</a> <br/>
         <a href="languages/java.html">Java</a> <br/>
         <a href="languages/python.html">Python</a> <br/>
-        </p>
     </div>
 </body>
 </html>
