--- a/languages/C++.html
+++ b/languages/C++.html
@@ -15,16 +15,15 @@
         <h3>Menu</h3>
         <a href="../index.html">Home</a> <br/>
         <a href="../sessions.html">Past Sessions</a> <br/>
-        <a href="../inspiration.html">Inspiration</a>
-
-        <p>Languages <br/>
+        <a href="../inspiration.html">Inspiration</a> <br />
+        <br />
+        Languages <br/>
         <a href="brainfuck.html"> Brainfuck</a> <br/>
         <a href="C.html">C</a> <br/>
         <a href="C++.html">C++</a> <br/>
         <a href="haskell.html">Haskell</a> <br/>
         <a href="java.html">Java</a> <br/>
         <a href="python.html">Python</a> <br/>
-        </p>
     </div>
 </body>
 </html>
