--- a/index.html
+++ b/index.html
@@ -5,41 +5,44 @@
     <link rel="stylesheet" type="text/css" href="styles/main.css"/>
 </head>
 <body>
+    <div class="main">
+        <h1 id="cardiff-school-of-mathematics-code-club">Cardiff School of Mathematics Code Club</h1>
+        <div class="main_body">
+            <p class="quote">
+                <i>Three Functions for the Windows under the sky,<br>
+                Seven for the Linux in their halls of stone,<br>
+                Nine for Apple doomed to die,<br>
+                One for the Dark Lord on his dark kernel<br>
+                In the Land of Arch where the Json lie.<br>
+                One Function to rule them all, One Function to find them,<br>
+                One Function to bring them all and in the darkness bind them<br>
+                In the Land of Arch where the Json lie.</i>
+            </p>
+            
+            <p>
+                Code Club is a place where like minded people who are passionate about programming can get together
+                and hang out, talk about coding in general and work on any projects that they have
+                in mind, whether it be solo or part of a team. Code Club is the ideal place to
+                improve your skills as a programmer while enjoying the pleasant company of others who share your interests.
+            </p>
 
-<div class="main">
-    <h1 id="cardiff-school-of-mathematics-code-club">Cardiff School of Mathematics Code Club</h1>
-    <p class="quote"><i>
-		Three Functions for the Windows under the sky,<br>
-		Seven for the Linux in their halls of stone,<br>
-		Nine for Apple doomed to die,<br>
-		One for the Dark Lord on his dark kernel<br>
-		In the Land of Arch where the Json lie.<br>
-		One Function to rule them all, One Function to find them,<br>
-		One Function to bring them all and in the darkness bind them<br>
-		In the Land of Arch where the Json lie.</i>
-	</p>
-    <div class="main_body">
-		<p>Code Club is a place where like minded people who are passionate about programming can get together
-           and hang out, talk about coding in general and work on any projects that they have
-           in mind, whether it be solo or part of a team. Code Club is the ideal place to
-           improve your skills as a programmer while enjoying the pleasant company of others who share your interests.</p>
+            <p>Can't wait to come along? Well we meet every Thursday in M/0.33 in the School of Mathematics building at 16:00.</p>
 
-        <p>Can't wait to come along? Well we meet every Thursday in M/0.33 in the School of Mathematics building at 16:00.</p>
+            <p>
+                Do you think it sounds like a great idea, but are looking for an excuse to turn up? Then be sure to check out
+                our <a href="inspiration.html">Inspiration</a> page.
+            </p>
 
-        <p>Do you think it sounds like a great idea, but are looking for an excuse to turn up? Then be sure to check out
-           our <a href="inspiration.html">Inspiration</a> page.</p>
+            <p><i><b>Disclaimer:</b> This website was made by programmers for programmers - please forgive any spelling mistakes!</i></p>
+        </div>
 
-        <p><i><b>Disclaimer:</b> This website was made by programmers for programmers - please forgive any spelling mistakes!</i></p>
     </div>
-
-</div>
-<!-- Navigation Menu -->
-<div class="menu">
-    <h3>Menu</h3>
-    <a href="index.html">Home</a> <br/>
-    <a href="sessions.html">Past Sessions</a> <br/>
-    <a href="inspiration.html">Inspiration</a>
-    <p></p>
-</div>
+    <!-- Navigation Menu -->
+    <div class="menu">
+        <h3>Menu</h3>
+        <a href="index.html">Home</a> <br/>
+        <a href="sessions.html">Past Sessions</a> <br/>
+        <a href="inspiration.html">Inspiration</a>
+    </div>
 </body>
 </html>
