--- a/inspiration.html
+++ b/inspiration.html
@@ -9,7 +9,7 @@
         <h1>Inspiration</h1>
 
         <div class="main_body">
-            <p> 
+            <p>
                 There is so much you can do during your time at Code Club anything
                 from learning a new programming languages such as <a href="languages/java.html">Java</a>
                 or <a href="languages/haskell.html">Haskell</a> to useful tools such
@@ -48,6 +48,8 @@
                     released on a Monday, Wednesday and Friday increasing in difficulty throughout the week. Challenges are based
                     on a wide variety of topics, often submitted by fellow users of the subreddit</li>
 
+                <li><a href="http://www.codingame.com/home/platinum-rift">Platinum Rift</a> - An online game.</li>
+
                 <li><a href="http://programmingpraxis.com/">Programming Praxis</a> - A blog with new exercises posted every few days
                     on a range of topics. Many of them are presented as a word problem.
             </ul>
@@ -55,7 +57,7 @@
             <h3>Stay Tuned</h3>
 
             <p>Watch this space, more coming soon...</p>
-            
+
             <p>Click <a href="index.html">here</a> to go back to the main page</p>
         </div>
     </div>
