--- a/languages/brainfk.html
+++ b/languages/brainfk.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Brainfuck</title>
+    <title>Brainf**k</title>
     <link rel="stylesheet" type="text/css" href="styles/main.css"/>
 </head>
 <body>
 
     <div class="main">
-        <h1>Brainfuck</h1>
+        <h1>Brainf**k</h1>
     </div>
 
     <!-- Navigation Menu -->
@@ -18,7 +18,7 @@
         <a href="../inspiration.html">Inspiration</a> <br />
         <br />
         Languages <br/>
-        <a href="brainfuck.html"> Brainfuck</a> <br/>
+        <a href="brainfk.html"> Brainf**k</a> <br/>
         <a href="C.html">C</a> <br/>
         <a href="C++.html">C++</a> <br/>
         <a href="haskell.html">Haskell</a> <br/>
