--- a/languages/C.html
+++ b/languages/C.html
@@ -18,7 +18,7 @@
         <a href="../inspiration.html">Inspiration</a> <br />
         <br />
         Languages <br/>
-        <a href="brainfuck.html"> Brainfuck</a> <br/>
+        <a href="brainfk.html"> Brainf**k</a> <br/>
         <a href="C.html">C</a> <br/>
         <a href="C++.html">C++</a> <br/>
         <a href="haskell.html">Haskell</a> <br/>
