Fixing centring of quote

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <div class="mainText">
         <h1 style="font-size: 6vh; text-align: center;">Cardiff School of Mathematics Code Club</h1>
         
-        <p class="well">
-            <i class="quote">Three Functions for the Windows under the sky,<br>
+        <p class="well quote">
+            <i>Three Functions for the Windows under the sky,<br>
                 Seven for the Linux in their halls of stone,<br>
                 Nine for Apple doomed to die,<br>
                 One for the Dark Lord on his dark kernel<br>
