Not sure what I did here

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
            <a href="inspiration.html">Inspiration</a> page.
         </p>
 
-        <p><i><b>Disclaimer:</b> This website was made by programmers for programmers - please forgive any spelling mistakes!</i></p>
+        <p class="well"	><i><b>Disclaimer:</b> This website was made by programmers for programmers - please forgive any spelling mistakes!</i></p>
     </div>
 
 </div>
