Fix js and css links on 404 page

--- a/404.html
+++ b/404.html
@@ -3,16 +3,16 @@
 <head>
     <title>404 - Code Club</title>
     <!-- jQuery JavaScript -->
-    <script src="js/jquery-2.1.1.js"></script>
+    <script src="/js/jquery-2.1.1.js"></script>
     <!-- bootstrap JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 
     <!-- bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-- bootstrap theme -->
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
 
-    <link rel="stylesheet" href="styles/Custom_formating.css"/>
+    <link rel="stylesheet" href="/styles/Custom_formating.css"/>
 
 </head>
 <body>
