Moved all styling into CSS

--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>404 - Code Club</title>
+
     <!-- jQuery JavaScript -->
     <script src="/js/jquery-2.1.1.js"></script>
     <!-- bootstrap JavaScript -->
@@ -15,9 +16,8 @@
     <link rel="stylesheet" href="/styles/Custom_formating.css"/>
 
 </head>
-<body>
 
-<div class="main">
+<body>
     <div class="container">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container-fluid">
@@ -60,14 +60,12 @@
         </nav>
 
         <div class="mainText" style="padding-top: 50px;">
-            <h1 style="font-size: 6vh; text-align: center;">404 - Page not found</h1>
+            <h1>404 - Page not found</h1>
 
             <div class="well">
                 <p>The page you have tried to access does not exists. Click <a href="/index.html">here</a> to go back to the homepage.</p>
             </div>
         </div>
     </div>
-</div>
-
 </body>
 </html>
