--- a/index.html
+++ b/index.html
@@ -13,15 +13,11 @@
     <!-- bootstrap theme -->
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
-    <!-- old CSS -->
-    <!--
-    <link rel="stylesheet" type="text/css" href="styles/main.css"/>
-    ->
-    <!- new CSS -->
     <link rel="stylesheet" href="styles/Custom_formating.css"/>
 
 </head>
-<body style="background-image: url(res/background.png)">
+
+<body>
     <div class="container">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container-fluid">
@@ -33,17 +29,17 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand active" href="/index.html">Home</a>
+                    <a class="navbar-brand active" href="index.html">Home</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="/sessions.html">Past Sessions</a></li>
+                        <li><a href="sessions.html">Past Sessions</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Inspiration<span class="caret"></span></a>
                             <ul class="dropdown-menu multi-level" role="menu">
-                            <li><a href="/inspiration.html">Inspiration</a></li>
+                            <li><a href="inspiration.html">Inspiration</a></li>
                                 <li class="dropdown-submenu">
                                     <a tabindex="-1" href="#">Languages</a>
                                     <ul class="dropdown-menu">
@@ -64,17 +60,17 @@
         </nav>
 
         <div class="mainText">
-            <h1 style="font-size: 6vh; text-align: center;">Cardiff School of Mathematics Code Club</h1>
+            <h1>Cardiff School of Mathematics Code Club</h1>
 
             <p class="well quote">
-                <ce><i>Three Functions for the Windows under the sky,<br>
+                <i>Three Functions for the Windows under the sky,<br>
                     Seven for the Linux in their halls of stone,<br>
                     Nine for Apple doomed to die,<br>
                     One for the Dark Lord on his dark kernel<br>
                     In the Land of Arch where the Json lie.<br>
                     One Function to rule them all, One Function to find them,<br>
                     One Function to bring them all and in the darkness bind them<br>
-                    In the Land of Arch where the Json lie.</i></ce>
+                    In the Land of Arch where the Json lie.</i>
             </p>
 
             <div class="well">
