--- a/inspiration.html
+++ b/inspiration.html
@@ -3,7 +3,7 @@
 <head>
     <title>Inspiration</title>
 
-     <!-- jQuery JavaScript -->
+    <!-- jQuery JavaScript -->
     <script src="js/jquery-2.1.1.js"></script>
     <!-- bootstrap JavaScript -->
     <script src="js/bootstrap.min.js"></script>
@@ -13,16 +13,11 @@
     <!-- bootstrap theme -->
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
-    <!-- old CSS -->
-    <!--
-    <link rel="stylesheet" type="text/css" href="styles/main.css"/>
-    ->
-     <!-- new CSS -->
     <link rel="stylesheet" href="styles/Custom_formating.css"/>
 
 </head>
 
-<body style="background-image: url(res/background.png)">
+<body>
     <div class="container">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container-fluid">
@@ -34,17 +29,17 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/index.html">Home</a>
+                    <a class="navbar-brand" href="index.html">Home</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="/sessions.html">Past Sessions</a></li>
+                        <li><a href="sessions.html">Past Sessions</a></li>
                         <li class="dropdown active">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Inspiration<span class="caret"></span></a>
                             <ul class="dropdown-menu multi-level" role="menu">
-                            <li><a href="/inspiration.html">Inspiration</a></li>
+                            <li class="active"><a href="inspiration.html">Inspiration</a></li>
                                 <li class="dropdown-submenu">
                                     <a tabindex="-1" href="#">Languages</a>
                                     <ul class="dropdown-menu">
@@ -64,8 +59,8 @@
             </div><!-- /.container-fluid -->
         </nav>
 
-    <div class="mainText" style="padding-top: 50px;">
-        <h1 style="font-size: 6vh; text-align: center;">Inspiration</h1>
+    <div class="mainText">
+        <h1>Inspiration</h1>
 
         <div class="well">
             <p> There is so much you can do during your time at Code Club anything
