Active flag on navbar

--- a/languages/C++.html
+++ b/languages/C++.html
@@ -36,11 +36,11 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li><a href="/sessions.html">Past Sessions</a></li>
-                        <li class="dropdown">
+                        <li class="dropdown active">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Inspiration<span class="caret"></span></a>
                             <ul class="dropdown-menu multi-level" role="menu">
                                 <li><a href="/inspiration.html">Inspiration</a></li>
-                                <li class="dropdown-submenu">
+                                <li class="dropdown-submenu active">
                                     <a tabindex="-1" href="#">Languages</a>
                                     <ul class="dropdown-menu">
                                         <li class="active"> <a href="languages/C++.html"> C++ </a> </li>
