--- a/languages/java.html
+++ b/languages/java.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Brainf**k</title>
+    <title>Java</title>
 
     <!-- jQuery JavaScript -->
     <script src="../js/jquery-2.1.1.js"></script>
@@ -45,9 +45,9 @@
                                     <ul class="dropdown-menu">
                                         <li> <a href="languages/C++.html"> C++ </a> </li>
                                         <li> <a href="languages/C.html"> C </a> </li>
-                                        <li class="active"> <a href="languages/brainfk.html"> Brainf**k </a> </li>
+                                        <li> <a href="languages/brainfk.html"> Brainf**k </a> </li>
                                         <li> <a href="languages/haskell.html"> Haskell </a> </li>
-                                        <li> <a href="languages/java.html"> Java </a> </li>
+                                        <li class="active"> <a href="languages/java.html"> Java </a> </li>
                                         <li> <a href="languages/python.html"> Python </a> </li>
                                     </ul>
                                 </li>
@@ -61,7 +61,7 @@
     
 
         <div class="mainText">
-            <h1>Brainf**k</h1>
+            <h1>Java</h1>
         </div>
     </div>
 
