Fixed a lot of links (hopefully)

--- a/languages/python.html
+++ b/languages/python.html
@@ -29,26 +29,26 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/index.html">Home</a>
+                    <a class="navbar-brand" href="../index.html">Home</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="/sessions.html">Past Sessions</a></li>
+                        <li><a href="../sessions.html">Past Sessions</a></li>
                         <li class="dropdown active">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Inspiration<span class="caret"></span></a>
                             <ul class="dropdown-menu multi-level" role="menu">
-                                <li><a href="/inspiration.html">Inspiration</a></li>
+                                <li><a href="../inspiration.html">Inspiration</a></li>
                                 <li class="dropdown-submenu active">
                                     <a tabindex="-1" href="#">Languages</a>
                                     <ul class="dropdown-menu">
-                                        <li> <a href="languages/C++.html"> C++ </a> </li>
-                                        <li> <a href="languages/C.html"> C </a> </li>
-                                        <li> <a href="languages/brainfk.html"> Brainf**k </a> </li>
-                                        <li> <a href="languages/haskell.html"> Haskell </a> </li>
-                                        <li> <a href="languages/java.html"> Java </a> </li>
-                                        <li class="active"> <a href="languages/python.html"> Python </a> </li>
+                                        <li> <a href="C++.html"> C++ </a> </li>
+                                        <li> <a href="C.html"> C </a> </li>
+                                        <li> <a href="brainfk.html"> Brainf**k </a> </li>
+                                        <li> <a href="haskell.html"> Haskell </a> </li>
+                                        <li> <a href="java.html"> Java </a> </li>
+                                        <li class="active"> <a href="python.html"> Python </a> </li>
                                     </ul>
                                 </li>
                                 <li><a href="#">Editors</a></li>
