Moved repeated div tags to default layout

--- a/404.html
+++ b/404.html
@@ -2,11 +2,7 @@
 layout: default
 title: 404
 ---
-        <div class="mainText" style="padding-top: 50px;">
-            <h1>404 - Page not found</h1>
+<h1>404 - Page not found</h1>
 
-            <div class="well">
-                <p>The page you have tried to access does not exists. Click <a href="/index.html">here</a> to go back to the homepage.</p>
-            </div>
-        </div>
+<p class="well">The page you have tried to access does not exists. Click <a href="/index.html">here</a> to go back to the homepage.</p>
 
