--- a/inspiration.html
+++ b/inspiration.html
@@ -84,7 +84,7 @@
             </div>
             <p>Some of the more popular languages include <a href="languages/java.html">Java</a>,
               <a href="languages/python.html">Python</a> and <a href="languages/C++.html">C++</a>.
-              However there are many more than that! Be sure to look at the full list on the left.
+              However there are many more than that! Be sure to look at the full list in the menu above.
             </p>
 
             <div class="well">
