added a contributors list and week 8  sessions

--- a/index.html
+++ b/index.html
@@ -90,6 +90,35 @@
             </div>
         </div>
 
+        <div class="well contributors">
+          <center>
+          <b>Contributors to this wesite are:</b>
+        </center>
+
+          <li>
+            <b>Alex Carney</b> <i>(Real Coder)</i>
+          </li>
+          <li>
+            <b>Adam Pohl</b> <i>()</i>
+          </li>
+          <li>
+            <b>Andy Wilson</b> <i>(Backround Graphics Manager)</i>
+          </li>
+          <li>
+            <b>Batduck</b> <i>(gramma correction for the real coder)<i>
+          </li>
+          <li>
+            <b>Jason</b> <i>(Probably should have found out his last name by now...oh well)</i>
+            <li>
+              <b>Tim Standen</b> <i>()</i>
+            </li>
+            <li>
+              <b>Toby</b> <i>()</i>
+            </li>
+            <li>
+              <b>Vince Knight</b> <i>(Also Known as Colonel Sarge)</i>
+            </li>
+
     </div>
 
 </body>
