--- a/inspiration.html
+++ b/inspiration.html
@@ -31,7 +31,7 @@ categories: inspiration
     <ul>
         {% for pages in site.pages %}
             {% if pages.categories contains 'languages' %}
-                <li class="double"><a href="{{ site.baseurl }}{{ pages.url }}">{{ pages.title }}</a>
+                <li><a href="{{ site.baseurl }}{{ pages.url }}">{{ pages.title }}</a>
             {% endif %}
         {% endfor %}
     </ul>
