Added some stuff to the contributor list

--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
             <b>Batduck</b> <i>(gramma correction for the real coder)<i>
           </li>
           <li>
-            <b>Jason</b> <i>(Probably should have found out his last name by now...oh well)</i>
+            <b>Jason Young</b> <i>(If there is a problem then its his fault)</i>
             <li>
               <b>Tim Standen</b> <i>()</i>
             </li>
             <li>
-              <b>Toby</b> <i>()</i>
+              <b>Toby</b> <i>(The reason why the website code is ugly but functional)</i>
             </li>
             <li>
               <b>Vince Knight</b> <i>(Also Known as Colonel Sarge)</i>
