Flamboyant Coders added

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <b>Alex Carney</b> <i>(Real Coder)</i>
           </li>
           <li>
-            <b>Adam Pohl</b> <i>()</i>
+            <b>Adam Pohl</b> <i>(Flamboyant Coder)</i>
           </li>
           <li>
             <b>Andy Wilson</b> <i>(Backround Graphics Manager)</i>
