--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="well contributors">
           <center>
-          <b>Contributors to this wesite are:</b>
+          <b>Contributors to this website are:</b>
         </center>
 
           <li>
@@ -108,10 +108,10 @@
             <b>Batduck</b> <i>(gramma correction for the real coder)<i>
           </li>
           <li>
-            <b>Jason Young</b> <i>(If there is a problem then its his fault)</i>
+            <b>Jason Young</b> <i>(If there is a problem then it's his fault)</i>
           </li>
             <li>
-              <b>Tim Standen</b> <i>()</i>
+              <b>Tim Standen</b> <i>(The one who cleans other people's code)</i>
             </li>
             <li>
               <b>Toby</b> <i>(The reason why the website code is ugly but functional)</i>
@@ -120,6 +120,11 @@
               <b>Vince Knight</b> <i>(Also Known as Colonel Sarge)</i>
             </li>
 
+            <center>
+            <li>
+              <i>Disclamer: This is NOT done in any particular order. It's definitly not in alphabetical order</i>
+            </li>
+          </center>
     </div>
 
 </body>
