Edited some contributor problems

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@ layout: default
         <b>Contributors to this wesite are:</b>
     </center>
     <ul>
+      <li>
+          <b>Adam Pohl</b> <i>(Flamboyant Coder)</i>
+      </li>
         <li>
             <b>Alex Carney</b> <i>(Real Coder)</i>
-        </li>
-        <li>
-            <b>Adam Pohl</b> <i>(Flamboyant Coder)</i>
         </li>
         <li>
             <b>Andy Wilson</b> <i>(Backround Graphics Manager)</i>
@@ -55,15 +55,13 @@ layout: default
               <b>Tim Standen</b> <i>(The Code Janitor)</i>
             </li>
             <li>
-              <b>Toby</b> <i>(The reason why the website code is ugly but functional)</i>
+              <b>Toby</b> <i>(The drive-by Bootstraper)</i>
             </li>
             <li>
               <b>Vince Knight</b> <i>(Also Known as Colonel Sarge)</i>
             </li>
 
             <center>
-            <li>
-              <i>Disclamer: This is NOT done in any particular order. It's definitly not in alphabetical order</i>
-            </li>
-          </center>
+            <i>Disclamer: This is NOT done in any particular order. It's definitly not in alphabetical order</i>
+            </center>
     </div>
