--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 
 <div class="well contributors">
     <center>
-        <b>Contributors to this wesite are:</b>
+        <b>Contributors to this website are:</b>
     </center>
     <ul>
       <li>
