--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@ layout: default
 
     <h1>Cardiff School of Mathematics Code Club</h1>
 
-    <i>Three Functions for the Windows under the sky,<br>
+    <p class="quote"><i>Three Functions for the Windows under the sky,<br>
     Seven for the Linux in their halls of stone,<br>
     Nine for Apple doomed to die,<br>
     One for the Dark Lord on his dark kernel<br>
     In the Land of Arch where the Json lie.<br>
     One Function to rule them all, One Function to find them,<br>
     One Function to bring them all and in the darkness bind them<br>
-    In the Land of Arch where the Json lie.</i>
+    In the Land of Arch where the Json lie.</i></p>
 
     <p>Code Club is a place where like minded people who are passionate about programming can get together
     and hang out, talk about coding in general and work on any projects that they have
