--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 ---
-layout: default
+layout: page
+title: Cardiff School of Mathematics Code Club
 ---
-
-<div class="home">
-
-    <h1>Cardiff School of Mathematics Code Club</h1>
 
     <p class="quote"><i>Three Functions for the Windows under the sky,<br>
     Seven for the Linux in their halls of stone,<br>
@@ -61,5 +58,4 @@ layout: default
     <center>
     <i>Disclamer: This is NOT done in any particular order. It's definitly not in alphabetical order.</i>
     </center>
-</div>
 
