I fixed it for you

--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@ layout: default
             </li>
 
             <center>
-            <i>Disclamer: This is NOT done in any particular order. It's definitly not in alphabetical order.</i>
+            <i>Disclamer: This is NOT done in any particular order. It is definitly not in alphabetical order.</i>
             </center>
     </div>
