I added myself to the contributors list

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@ layout: default
             <li>
               <b>Vince Knight</b> <i>(Also Known as Colonel Sarge)</i>
             </li>
-
+            <li>
+              <b>Ambrose Law</b> <i>(The Padawan)</i>
+            </li>
+            
             <center>
             <i>Disclamer: This is NOT done in any particular order. It is definitly not in alphabetical order.</i>
             </center>
