Adding gource video - probably not responsive - am sure Timothy will fix <- thanks! :)

--- a/index.html
+++ b/index.html
@@ -32,11 +32,17 @@ title: Cardiff School of Mathematics Code Club
     <ul>
     {% for contributor in site.data.contributors%}
        <li>
-        <b>{{contributor.name}}</b> <i>({{contributor.title}})</i> 
+        <b>{{contributor.name}}</b> <i>({{contributor.title}})</i>
        </li>
     {% endfor %}
     </ul>
     <center>
     <i>Disclamer: This is NOT done in any particular order. It's definitly not in alphabetical order.</i>
+    </center>
+    <p>
+    Here is a video that shows the various contributors so far (as of 4th of December 2014):
+    </p>
+    <center>
+    <iframe width="560" height="315" align='middle' src="//www.youtube.com/embed/UdbXWZJSwnE" frameborder="0" allowfullscreen></iframe>
     </center>
 
