Fixed video being non-responsive #3

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@ title: Cardiff School of Mathematics Code Club
     <p>
     Here is a video that shows the various contributors so far (as of 4th of December 2014):
     </p>
-    <center>
-    <iframe width="560" height="315" align='middle' src="//www.youtube.com/embed/UdbXWZJSwnE" frameborder="0" allowfullscreen></iframe>
-    </center>
+
+    <div class="video">
+        <figure>
+        <iframe width="560" height="315" align='middle' src="//www.youtube.com/embed/UdbXWZJSwnE" frameborder="0" allowfullscreen></iframe>
+        </figure>    
+    </div>
 
