--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: Cardiff School of Mathematics Code Club
     {% endfor %}
     </ul>
     <center>
-    <i>Disclamer: This is NOT done in any particular order. It's definitly not in alphabetical order.</i>
+    <i>Disclamer: This is NOT done in any particular order. It's definitly NOT in ALPHABETICAL order.</i>
     </center>
     <p>
     Here is a video that shows the various contributors so far (as of 4th of December 2014):
