Remove well class

--- a/404.html
+++ b/404.html
@@ -3,5 +3,5 @@ layout: page
 title: 404 - Page not found
 ---
 
-<p class="well">The page you have tried to access does not exists. Click <a href="/index.html">here</a> to go back to the homepage.</p>
+<p>The page you have tried to access does not exists. Click <a href="/index.html">here</a> to go back to the homepage.</p>
 
