--- a/index.html
+++ b/index.html
@@ -47,3 +47,11 @@ Do you think it sounds like a great idea, but are looking for an excuse to turn 
     </figure>
 </div>
 
+<p>
+Here is the latest <a href='{{site.baseurl}}/blog/'>blog</a> post:
+</p>
+<p align=center>
+{% for post in site.posts limit:1 %}
+<a href='{{post.url}}'>{{post.title}}</a> written by {{post.author}}
+{% endfor %}
+</p>
