--- a/editors/Atom.html
+++ b/editors/Atom.html
@@ -4,14 +4,22 @@ title: Atom
 website : https://atom.io/
 categories: inspiration editors
 ---
-<p> Atom is stated as the hackable editor for the 21<sup>st</sup> century. Unlike other editors such as vim, ed, vi or nano; atom cannot be run in the terminal.
+<p>
+Atom is stated as the hackable editor for the 21<sup>st</sup> century. Unlike other editors such as vim, ed, vi or nano; atom cannot be run in the terminal.
+</p>
 
+<p>
 There are loads of cool packegees that you can download for atom, such as 'Backround Matrix' - see gif below, 'color picker' - allows you to easily change the hex code, 'minimap' - A preview of the full source code to name a few.
+</p>
 
 <img src="Graphics/videos/Atom-background-matrix.gif"/>
 
+<p>
 You can even create your own syntax and UI themes if you don't like any of the presets/ones avalible to download. Also, as you can see in the screenshot below you are able to edit any of the packages you download allowing you to make atom more personal.
+</p>
 
 <img src="Graphics/images/Atom Screenshot.png"/>
 
+<p>
 For more information about how wonderful Atom is or to download this amazing editor please click the link below.
+</p>
